--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
   "license": "MIT",
   "dependencies": {
     "@types/cbor": "^6.0.0",
-    "@types/websocket": "^1.0.5",
     "@types/xml2js": "^0.4.11",
     "bson": "^5.2.0",
     "buffer": "^6.0.3",
+    "cbor": "^8.1.0",
     "jest-environment-jsdom": "^29.5.0",
     "stream-browserify": "^3.0.0",
     "string_decoder": "^1.3.0",
