--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "bson": "^5.2.0",
     "buffer": "^6.0.3",
     "cbor": "^8.1.0",
+    "class-transformer": "^0.5.1",
     "jest-environment-jsdom": "^29.5.0",
+    "reflect-metadata": "^0.1.13",
     "stream-browserify": "^3.0.0",
     "string_decoder": "^1.3.0",
     "timers-browserify": "^2.0.12",
